<resources>
    <string name="app_name">Green_us</string>
    <string name="auto_login">자동로그인</string>
    <string name="login">로그인</string>
    <string name="find_email">이메일 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="join">회원가입</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="not_allowed">사용중인 아이디입니다</string>
    <string name="allowed">사용가능한 아이디입니다</string>
    <string name="check_id">중복확인</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호(6자 이상)</string>
    <string name="pwd_validation">6자 이상의 비밀번호를 입력해 주세요</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="phone">예시: 01012345678</string>
    <string name="phone2">전화번호</string>
    <string name="address">주소</string>
    <string name="find_address">주소찾기</string>
    <string name="address_detail">상세주소</string>
    <string name="welcome">환영합니다!</string>
    <string name="join_complt">회원가입이 완료되었습니다</string>
    <string name="go_to_login">로그인하러 가기</string>
    <string name="green_ing">진행중</string>
    <string name="green_end">진행완료</string>
    <string name="green_open">개설</string>
    <string name="check_phone">인증번호 받기</string>
    <string name="num">인증번호</string>
    <string name="check_num">인증번호 확인</string>
    <string name="input_num">인증번호 입력란</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="send_email">이메일 전송</string>
    <string name="mypage">마이페이지</string>
    <string name="go_to_green_open">그리닝 개설하기</string>
    <string name="my_review">내 리뷰</string>
    <string name="notice">공지사항</string>
    <string name="faq">FAQ</string>
    <string name="csc">고객센터</string>
    <string name="quit">회원탈퇴</string>
    <string name="profile_setting">프로필관리</string>
    <string name="complete">완료</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="edit">편집</string>
    <string name="point">포인트</string>
    <string name="bank_acc">계좌번호</string>
    <string name="withdraw">출금하기</string>
    <string name="delete">삭제</string>
    <string name="total">전체</string>
    <string name="greening">그리닝</string>
    <string name="greening_ing">진행중인 그리닝</string>
    <string name="greening_end">완료한 그리닝</string>
    <string name="certification">인증</string>
    <string name="point_notice">5,000원 이상부터 출금 가능합니다</string>
    <string name="title_activity_find_email">FindEmailActivity</string>
    <string name="greening_degree">그리닝 진척도</string>
    <string name="total_degree">전체 진행률</string>
    <string name="ing_total_greening_num">진행중인 그리닝:</string>
    <string name="ing_total_greening_more">진행중인 그리닝 전체보기</string>
    <string name="end_total_greening_more">완료 그리닝 전체보기</string>
    <string name="review_more">리뷰 전체보기</string>
    <string name="end_greening_statistics">완료 그리닝 통계</string>
    <string name="end_greening">완료한 그리닝</string>
    <string name="tiotal_gain_point">총 획득 포인트</string>
    <string name="account_holder">예금주</string>
    <string name="withdraw_point">출금액</string>
    <string name="open_green">개설하기</string>
    <string name="bank">은행</string>
    <string name="green_name_ex">예) 텀블러 사용하기</string>
    <string name="start_date_fm">YYYY-MM-DD</string>
    <string name="required_input">* 필수 입력 사항</string>
    <string name="start_date_">*시작일</string>
    <string name="name_star">*이름</string>
    <string name="period">*기간</string>
    <string name="week1">1주</string>
    <string name="week2">2주</string>
    <string name="week3">3주</string>
    <string name="week4">4주</string>
    <string name="week5">5주</string>
    <string name="week6">6주</string>
    <string name="week7">7주</string>
    <string name="week8">8주</string>
    <string name="authentication_means">*인증수단</string>
    <string name="green_detail">*그리닝 설명</string>
    <string name="use_camera">카메라</string>
    <string name="use_camera_gallery">카메라, 갤러리</string>
    <string name="green_detail_ex">예) 이 그리닝에 참가하면 쓰레기를 줄일 수 있습니다</string>
    <string name="upload_picture">*사진 업로드</string>
    <string name="upload_picture_ex">그리닝 대표 이미지</string>
    <string name="deposit">*예치금</string>
    <string name="deposit_ex">예) 10,000</string>
    <string name="frequency">*인증빈도</string>
    <string name="frequency1">주 1회</string>
    <string name="frequency2">주 2회</string>
    <string name="frequency3">주 3회</string>
    <string name="frequency4">주 4회</string>
    <string name="frequency5">주 5회</string>
    <string name="frequency6">주 6회</string>
    <string name="frequency7">주 7회</string>
    <string name="write_review">리뷰 작성</string>
    <string name="pedometer">만보기</string>
    <string name="start">시작</string>
    <string name="logout">로그아웃</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">다음</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_find_pw">FindPwActivity</string>
    <!--그리닝 상세페이지 strings-->
    <string name="greening_title">그리닝명</string>
    <string name="term">기간</string>
    <string name="freq">인증빈도</string>
    <string name="certifi_method">인증수단</string>
    <string name="certify">인증하기</string>
    <string name="participate">그리닝 참여하기</string>
    <string name="start_date">5월 26일부터 시작</string>
    <string name="feeInfo">예치금</string>
    <string name="fee">5,000</string>
    <string name="informations">안내사항</string>
    <string name="howto">버스, 지하철 카드 이용 내역을 통해 인증 가능합니다.\n일회용 교통카드의 경우 카드 발급 사진을 찍어서 인증가능합니다.\nk-패스, 기후동행카드 이용내역 인증 가능합니다.</string>
    <string name="award_inofs">그리닝 보상 안내</string>
    <string name="acheive_100_result">예치금 전액 환급 + 상금</string>
    <string name="acheive_85_result">예치금 전액 환급</string>
    <string name="acheive_under_85_result">예치금 환급 불가 </string>
    <string name="acheive_100">100% 달성</string>
    <string name="acheive_85">85% 이상 달성</string>
    <string name="acheive_under_85">85% 미만 달성</string>
    <string name="certifi_notice">인증 유의사항</string>
    <string name="certifi_notice_important">*인증 조건에 부적합할 경우 삭제/경고 조치 됨*</string>
    <string name="around_me">내 주변</string>
    <!--회원가입-->
    <string name="num_validation">잘못된 인증번호입니다</string>
    <string name="email_exist">이미 존재하는 이메일입니다</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_exist_end">완료한 그리닝이 없습니다</string>
    <string name="not_exist_ing">진행중인 그리닝이 없습니다</string>
    <string name="not_exist_open">개설한 그리닝이 없습니다</string>
    <string name="type">*그리닝 유형</string>
    <string name="do_green">활동형</string>
    <string name="buy_green">구매형</string>
    <!--이미지 크롭 라이브러리 텍스트 커스텀-->
    <string name="ucrop_label_original">기본</string>
    <string name="ucrop_menu_crop">크롭</string>
    <string name="ucrop_rotate">회전</string>
    <string name="ucrop_scale">확장</string>
    <string name="ucrop_crop">크롭</string>

    <string name="title_choose_image_provider">선택하기</string>
    <string name="action_cancel">취소</string>
    <string name="title_gallery">갤러리</string>
    <string name="title_camera">카메라</string>
    <string name="ucrop_label_edit_photo">이미지 수정하기</string>
    <string name="permission_camera_denied">
        <![CDATA[이미지 사용을 위한 권한이 필요합니다. 카메라 설정의 권한을 허용해주세요. > Permissions.]]></string>


</resources>