<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_greening"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_deafault" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_only_bottom"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_greening">

            <TextView
                android:id="@+id/greening_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greening_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_main_info" />

            <TextView
                android:id="@+id/tag_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/hashtag"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/term"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/tag_freq"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greening_title" />

            <TextView
                android:id="@+id/tag_freq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/hashtag"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/freq"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tag_term"
                app:layout_constraintTop_toTopOf="@+id/tag_term" />

            <TextView
                android:id="@+id/tag_certifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/hashtag"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/certifi_method"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tag_freq"
                app:layout_constraintTop_toTopOf="@+id/tag_term" />

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/start_date"
                android:textColor="#464646"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag_term" />

            <TextView
                android:id="@+id/feeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/feeInfo"
                android:textColor="#464646"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />

            <TextView
                android:id="@+id/tv_participate_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:minEms="4"
                android:text="@string/fee"
                android:textColor="#464646"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/feeInfo"
                app:layout_constraintStart_toEndOf="@+id/feeInfo"
                app:layout_constraintTop_toTopOf="@+id/feeInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_when_official"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_main_info"
            app:srcCompat="@drawable/test_greening_detail_official"
            android:visibility="gone" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/greening_infos_layout"
            app:layout_constraintTop_toBottomOf="@+id/layout_main_info">
            <LinearLayout
                android:id="@+id/layout_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/informations"
                    android:textColor="#464646"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_howto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/howto"
                    android:textColor="#464646"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_award"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layout_infos"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/tv16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/award_inofs"
                    android:textColor="#464646"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/acheive_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/acheive_100"
                        android:textColor="#464646"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/acheive_100_result"
                        android:textColor="#464646"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView19"
                        app:layout_constraintStart_toEndOf="@+id/textView19"
                        app:layout_constraintTop_toTopOf="@+id/textView19" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/acheive_85"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/acheive_85"
                        android:textColor="#464646"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/acheive_85_result"
                        android:textColor="#464646"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView21"
                        app:layout_constraintStart_toEndOf="@+id/textView21"
                        app:layout_constraintTop_toTopOf="@+id/textView21" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/acheive_under_85"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/acheive_under_85"
                        android:textColor="#464646"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/acheive_under_85_result"
                        android:textColor="#464646"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView23"
                        app:layout_constraintStart_toEndOf="@+id/textView23"
                        app:layout_constraintTop_toTopOf="@+id/textView23" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layout_award"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/certifi_notice"
                    android:textColor="#464646"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certifi_notice_important"
                    android:textColor="#C81313"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


