<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Join1Fragment">


    <ImageView
        android:id="@+id/btn_esc"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/btn_prev_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:background="@drawable/rectangle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingHorizontal="9dp"
        android:paddingVertical="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_esc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="#C81313"
        android:paddingHorizontal="9dp"
        android:visibility="gone"
        android:text="@string/email_exist" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:background="@drawable/rectangle"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="9dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pw"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="#C81313"
        android:paddingHorizontal="9dp"
        android:visibility="gone"
        android:text="@string/pwd_validation" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/next"
        android:background="@drawable/button_custom"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>