<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/user_img"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="그리너스"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name1" />

    <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <TextView
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="greenus@tukorea.ac.kr"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <TextView
        android:id="@+id/phone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone2"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <TextView
        android:id="@+id/phone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="010-1234-5678"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/phone1" />

    <TextView
        android:id="@+id/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone2" />

    <TextView
        android:id="@+id/address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="경기도 시흥시 산기대학로 237 G동 412호"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/address1"
        app:layout_constraintTop_toBottomOf="@+id/address1" />

</androidx.constraintlayout.widget.ConstraintLayout>